--- a/package.json
+++ b/package.json
@@ -16,12 +16,20 @@
     "embla-carousel-autoplay": "^8.0.4",
     "embla-carousel-react": "^8.0.4",
     "lucide-react": "^0.378.0",
+    "marked": "^13.0.0",
     "next": "14.2.3",
     "prisma": "^5.13.0",
     "react": "^18",
     "react-dom": "^18",
+    "rehype-raw": "^7.0.0",
+    "rehype-stringify": "^10.0.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "unified": "^11.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
