--- a/package.json
+++ b/package.json
@@ -9,30 +9,45 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@mercadopago/sdk-react": "^0.0.19",
     "@prisma/client": "^5.13.0",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@stripe/stripe-js": "^4.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.0.4",
     "embla-carousel-react": "^8.0.4",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.378.0",
     "marked": "^13.0.0",
-    "next": "14.2.3",
+    "mercadopago": "^2.0.11",
+    "next": "^14.2.3",
     "prisma": "^5.13.0",
+    "qs": "^6.12.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
     "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
+    "stripe": "^16.2.0",
+    "swiper": "^11.1.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "unified": "^11.0.4"
+    "unified": "^11.0.4",
+    "use-debounce": "^10.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
+    "@types/mercadopago": "^1.5.11",
     "@types/node": "^20",
+    "@types/qs": "^6.9.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
