--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "remark-html": "^16.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
+    "sonner": "^1.5.0",
     "stripe": "^16.2.0",
     "swiper": "^11.1.4",
     "tailwind-merge": "^2.3.0",
