--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "marked": "^13.0.0",
     "mercadopago": "^2.0.11",
     "next": "^14.2.3",
+    "next-themes": "^0.3.0",
     "prisma": "^5.13.0",
     "qs": "^6.12.2",
     "react": "^18",
