--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -25,6 +25,7 @@
     "mercadopago": "^2.0.11",
     "next": "^14.2.3",
     "next-themes": "^0.3.0",
+    "next-video": "^1.1.1",
     "prisma": "^5.13.0",
     "qs": "^6.12.2",
     "react": "^18",
