--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@mercadopago/sdk-react": "^0.0.19",
     "@prisma/client": "^5.13.0",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@stripe/stripe-js": "^4.1.0",
